---
source: src/core/generator/generator.rs
expression: cfg_module.config().to_sdl()
---
schema @server @upstream(allowedHeaders: ["authorization"], baseURL: "https://example.com") {
  query: Query
}

type InCompatibleProperty {
  campaignTemplates: JSON
  colors: [JSON]
}

type Query {
  inCompatibleObjects: [JSON] @http(path: "/api/v2/users")
  inCompatibleProperties: InCompatibleProperty @http(path: "/")
  userData: [Userdatum] @http(path: "/users")
}

type Userdatum {
  adult: Boolean
  age: Int
  name: String
}
